...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="Link card: " />

                        <CheckBox
                            android:id="@+id/chkLinkCard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false" />
                    </LinearLayout>

                    <LinearLayout
...
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="App ID" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextAppID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3" />
            </LinearLayout>

            <LinearLayout
...
                    android:layout_height="wrap_content"
                    android:text="Kim Nguyên Bảo để nâng cấp level" />
            </LinearLayout>


            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:text="PAY NOW" />
...
