...
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/zpw_row_padding"
            android:paddingTop="@dimen/zpw_row_padding"
            android:theme="@style/TextLabelHint" >

            <vn.zing.pay.zmpsdk.view.custom.VPaymentValidDateEditText
                android:id="@+id/CreditCardExpiredDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/zpw_edittext_noborder"
                android:hint="@string/zpw_string_credit_card_expired_date_hint"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="number"
...
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/zpw_row_padding"
            android:paddingTop="@dimen/zpw_row_padding"
            android:theme="@style/TextLabelHint" >

            <vn.zing.pay.zmpsdk.view.custom.VPaymentDrawableEditText
                android:id="@+id/CreditCardCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/zpw_edittext_noborder"
                android:hint="@string/zpw_string_credit_card_cvv_hint"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="number"
...
